--- a/assets/css/fondo_principal.css
+++ b/assets/css/fondo_principal.css
@@ -1,15 +1,9 @@
 body {
 
 
-background-image: url("../img/fondo_principal.jpg");
-background-position: center center;
-background-repeat: no-repeat;
-background-attachment: fixed;
-background-size: cover;
-background-color: #66999;
-
-
- 
-
+background: rgb(13,7,7);
+background: linear-gradient(180deg, rgba(13,7,7,1) 6%, rgba(8,137,255,1) 62%);
+padding-bottom: 50px;
 
 }
+
